--- a/languages/surecart.pot
+++ b/languages/surecart.pot
@@ -7,7 +7,7 @@ msgstr ""
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"POT-Creation-Date: 2024-11-11T23:25:46+00:00\n"
+"POT-Creation-Date: 2024-11-13T16:55:15+00:00\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "X-Generator: WP-CLI 2.9.0\n"
 
@@ -1877,7 +1877,7 @@ msgstr ""
 #: src/Controllers/Admin/Settings/BaseSettings.php:47
 #: layouts/partials/admin-settings-sidebar.php:15
 #: settings/order/OrderProtocol.js:40
-msgid "Orders & Receipts"
+msgid "Orders & Invoices"
 msgstr ""
 
 #: src/Controllers/Admin/Settings/BaseSettings.php:48
